# cdk-uv-python-example-forblog

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
cdk_uv_python_example/: cdk_uv_python_example_stack.py
src/: hello.py
tests/: test_hello.py
tests/unit/: test_cdk_uv_python_example_stack.py
