[project]
name = "cdk-uv-python-example-forblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.172.0",
    "constructs>=10.0.0,<11.0.0",
]

[tool.uv]
dev-dependencies = [
    "aws-cdk-lib==2.172.0",
    "constructs>=10.0.0,<11.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]
